--- a/portfolio-duo.html
+++ b/portfolio-duo.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/ico" href="logohexit.ico">
     <title>H3XI7</title>   <!-- tu tytułs trony ale na pasku w przeglądarce  -->
+    <meta name="description" content="Hexit Rely – Sound Designer and Music Producer specializing in immersive soundscapes, game audio, and electronic music.">
+
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
