--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <meta name="description" content="Contact Hexit Rely for professional audio, music production, and sound design services.">
+    <link rel="icon" type="image/ico" href="logohexit.ico">
+<meta name="description" content="Hexit Rely – Sound Designer and Music Producer specializing in immersive soundscapes, game audio, and electronic music.">
+
 </head>
 <body>
     <header class="modern-header">
