--- a/hexforest.html
+++ b/hexforest.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hex Forest - Olaf Hexit Rely Zawadzki</title>
+    <link rel="icon" type="image/ico" href="logohexit.ico">
     <link rel="stylesheet" href="styles.css">
+    <meta name="description" content="Hexit Rely – Sound Designer and Music Producer specializing in immersive soundscapes, game audio, and electronic music.">
+
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
