--- a/portfolio-item-template.html
+++ b/portfolio-item-template.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PROJECT_NAME - Hexit Rely Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/ico" href="logohexit.ico">
+    <meta name="description" content="Hexit Rely – Sound Designer and Music Producer specializing in immersive soundscapes, game audio, and electronic music.">
+
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
