--- a/offert.html
+++ b/offert.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -21,7 +21,6 @@
             <ul class="nav-menu">
                 <li><a href="index.html#about">About</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="offert.html" class="active">Services</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
